[tool.poetry]
name = "pycounts_ykz"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Yukun Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
